--- a/config
+++ b/config
@@ -1,38 +1,18 @@
 # i3 config file (v4) davidescion edit
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 8
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn't scale on retina/hidpi displays.
-
-# use these keys for focus, movement, and resize directions when reaching for
-# the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
-
-# use Mouse+Mod4 to drag floating windows to their wanted position
-floating_modifier Mod4
+# Definitions
+# set $mod Mod4 # Mod4 is super or windows key or command Mod1 is alt or option
+set $ws1 "1. Terminals"
+set $ws2 "2. Firefox"
+set $ws3 "3. Discord"
+set $ws4 "4. Text Editors"
+set $ws5 "5. Picture Editing"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9. Logging"
+set $ws10 "10. Audio Rack"
+# You should probably edit those
 
 # start a terminal
 bindsym Mod4+Return exec sakura
@@ -40,35 +20,16 @@ bindsym Mod4+Return exec sakura
 # kill focused window
 bindsym Mod4+q kill
 
-# start dmenu (a program launcher)
-bindsym Mod4+space exec dmenu_run #ideal for mac users
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod4+space exec --no-startup-id i3-dmenu-desktop
-# davidescion doesn't use or suggest this because displaying cli stuff can be handy
+# start program launcher
+bindsym Mod4+space exec dmenu_run # ideal for mac users, you might wanna change this
 
-# change focus
-bindsym Mod4+$left focus left
-bindsym Mod4+$down focus down
-bindsym Mod4+$up focus up
-bindsym Mod4+$right focus right
-# I almost never use those and might even remove them
-
-# alternatively, you can use the cursor keys:
+# move focus
 bindsym Mod4+Left focus left
 bindsym Mod4+Down focus down
 bindsym Mod4+Up focus up
 bindsym Mod4+Right focus right
 
 # move focused window
-bindsym Mod4+Shift+$left move left
-bindsym Mod4+Shift+$down move down
-bindsym Mod4+Shift+$up move up
-bindsym Mod4+Shift+$right move right
-# Same as above
-
-# alternatively, you can use the cursor keys:
 bindsym Mod4+Shift+Left move left
 bindsym Mod4+Shift+Down move down
 bindsym Mod4+Shift+Up move up
@@ -82,48 +43,13 @@ bindsym Mod4+v split v
 
 # enter fullscreen mode for the focused container
 bindsym Mod4+f fullscreen toggle
-# I barely use this too
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym Mod4+s layout stacking
-bindsym Mod4+w layout tabbed
-bindsym Mod4+e layout toggle split
-# why are you even using i3 if you use those
-
-# toggle tiling / floating
-bindsym Mod4+Shift+space floating toggle
-# somewhat useful
-
-# change focus between tiling / floating windows
-bindsym Mod4+t focus mode_toggle
-
-# focus the parent container
-bindsym Mod4+a focus parent
-
-# focus the child container
-#bindsym Mod4+d focus child
 
 # move the currently focused window to the scratchpad
 bindsym Mod4+Shift+minus move scratchpad
-# excuse me what? I have no idea what this even does
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym Mod4+minus scratchpad show
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1. Terminals"
-set $ws2 "2. Firefox"
-set $ws3 "3. Discord"
-set $ws4 "4. Text Editors"
-set $ws5 "5. Picture Editing"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9. Logging"
-set $ws10 "10. Audio Rack"
-#You should probably edit those
 
 # switch to workspace
 bindsym Mod4+1 workspace $ws1
@@ -150,43 +76,12 @@ bindsym Mod4+Shift+8 move container to workspace $ws8
 bindsym Mod4+Shift+9 move container to workspace $ws9
 bindsym Mod4+Shift+0 move container to workspace $ws10
 
-# reload the configuration file
-bindsym Mod4+Shift+c reload
-# honestly you should restart and not use this which works tremendusly better in my experience
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3 or config file)
 bindsym Mod4+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym Mod4+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 10 px or 10 ppt
-        bindsym $down       resize grow height 10 px or 10 ppt
-        bindsym $up         resize shrink height 10 px or 10 ppt
-        bindsym $right      resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or Mod4+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym Mod4+r mode "default"
-}
-
-bindsym Mod4+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar (plus the system information i3status)
 bar {
         status_command LC_ALL=C i3status -c ~/.i3/i3status.conf
         colors{
@@ -195,22 +90,14 @@ bar {
 }
 }
 
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-#ricing aka colors aka I ain't fixin' this
+# ricing aka colors aka I ain't fixin' this if it breaks
 # window colors
 #                       border              background         text                 indicator
 client.focused          #1D241D             #1D241D            #ffffff              #423638
 
 # execs
-exec_always --no-startup-id feh --bg-fill ~/.i3/bg.jpg #change this to your background if you don't want to use mine 
+exec_always --no-startup-id feh --bg-fill ~/.i3/bg.png #change this to your background if you don't want to use mine
+exec sakura
 exec sakura
 exec firefox
 exec i3
@@ -218,21 +105,20 @@ exec_always "setxkbmap -layout it"
 exec cadence
 exec discord
 exec carla
-exec subl3
+exec --no-startup-id sakura -x micro --class micro
 exec gimp
 
 # assigns
 assign[class=gimp]$ws5
 assign[class=Gimp]$ws5
-# assign[class=sakura]$ws1
-# assign[class=Sakura]$ws1
-# removed because terminals are useful on all workspaces
 assign[class="Cadence"]$ws10
 assign[class="Firefox"]$ws2
 assign[class="Carla2"]$ws10
 assign[class="discord"]$ws3
-assign[class="subl3"]$ws4
-assign[class="Subl3"]$ws4
+assign[class="micro"]$ws4
+# assign[class=sakura]$ws1
+# assign[class=Sakura]$ws1
+# removed because terminals are useful on all workspaces
 
 # screenshot
 bindsym Mod4+Shift+s exec xfce4-screenshooter
