--- a/config
+++ b/config
@@ -2,6 +2,7 @@
 
 # Definitions
 # set $mod Mod4 # Mod4 is super or windows key or command Mod1 is alt or option
+set $term sakura
 set $ws1 "1. Terminals"
 set $ws2 "2. Firefox"
 set $ws3 "3. Discord"
@@ -15,13 +16,13 @@ set $ws10 "10. Audio Rack"
 # You should probably edit those
 
 # start a terminal
-bindsym Mod4+Return exec sakura
+bindsym Mod4+Return exec $term
 
 # kill focused window
 bindsym Mod4+q kill
 
 # start program launcher
-bindsym Mod4+space exec dmenu_run # ideal for mac users, you might wanna change this
+bindsym Mod4+space exec dmenu_run # ideal for mac users
 
 # move focus
 bindsym Mod4+Left focus left
@@ -97,16 +98,17 @@ client.focused          #1D241D             #1D241D            #ffffff          
 
 # execs
 exec_always --no-startup-id feh --bg-fill ~/.i3/bg.png #change this to your background if you don't want to use mine
-exec sakura
-exec sakura
+exec $term
+exec $term
 exec firefox
 exec i3
 exec_always "setxkbmap -layout it"
 exec cadence
 exec discord
 exec carla
-exec --no-startup-id sakura -x micro --class micro
+exec --no-startup-id $term -e micro --class micro
 exec gimp
+exec_always compton -b --config ~/.config/compton.conf
 
 # assigns
 assign[class=gimp]$ws5
@@ -116,9 +118,6 @@ assign[class="Firefox"]$ws2
 assign[class="Carla2"]$ws10
 assign[class="discord"]$ws3
 assign[class="micro"]$ws4
-# assign[class=sakura]$ws1
-# assign[class=Sakura]$ws1
-# removed because terminals are useful on all workspaces
 
 # screenshot
 bindsym Mod4+Shift+s exec xfce4-screenshooter
